--- a/.github/workflows/auth-deploy.yml
+++ b/.github/workflows/auth-deploy.yml
@@ -1,4 +1,4 @@
-name: Host App flow
+name: Auth App flow
 
 on:
   push:
@@ -25,6 +25,14 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
           cache: 'maven'
+
+      - name: Cache local Maven repository
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
 
       - name: Build with Maven
         run: mvn clean package  # --quiet
