--- a/kubernetes-configs/auth-app-deployment.yaml
+++ b/kubernetes-configs/auth-app-deployment.yaml
@@ -21,7 +21,7 @@ spec:
         kompose.version: 1.26.0 (40646f47)
       creationTimestamp: null
       labels:
-        io.kompose.network: "true"
+        io.kompose.network/app-net: "true"
         io.kompose.service: auth-app
     spec:
       containers:
