--- a/kubernetes-configs/mongo-db-auth-deployment.yaml
+++ b/kubernetes-configs/mongo-db-auth-deployment.yaml
@@ -22,7 +22,7 @@ spec:
         kompose.version: 1.26.0 (40646f47)
       creationTimestamp: null
       labels:
-        io.kompose.network: "true"
+        io.kompose.network/app-net: "true"
         io.kompose.service: mongo-db-auth
     spec:
       containers:
