--- a/.github/workflows/auth-build-test.yml
+++ b/.github/workflows/auth-build-test.yml
@@ -1,4 +1,4 @@
-name: Auth App Build and Test
+name: Auth App flow
 
 on:
   push:
@@ -24,11 +24,16 @@ jobs:
           distribution: 'temurin'
           cache: 'maven'
 
+      - name: Cache local Maven repository
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+
       - name: Build with Maven
         run: mvn clean package  # --quiet
-
-      - name: Set up MongoDB service
-        uses: supercharge/mongodb-github-action@1.8.0
 
       - name: Run tests
         run: mvn test  # --quiet
